--- a/theme.html
+++ b/theme.html
@@ -11,8 +11,7 @@
 
 	<title><%sub_title><!--tag_area--> | <!--/tag_area--><!--search_area--> | <!--/search_area--><!--category_area--> | <!--/category_area--><!--date_area--> | <!--/date_area--><!--permanent_area--> | <!--/permanent_area--><!--titlelist_area-->Archives | <!--/titlelist_area--><!--edit_area--> | <!--/edit_area--><%blog_name></title>
 	
-<!--	<link rel="stylesheet" type="text/css" charset="utf-8" href="<%css_link>" /> -->
-	<link rel="stylesheet" type="text/css" charset="utf-8" href="https://dl.dropbox.com/u/9611165/fc2.themes/mini/css/theme.css" />
+  <link rel="stylesheet" type="text/css" charset="utf-8" href="<%css_link>" />
 	
 	<link rel="alternate" type="application/rss+xml" title="RSS" href="<%url>?xml" />
 	<link rel="archives" href="/archives.html" title="All Archives" />
@@ -29,7 +28,7 @@
 	<script type="text/javascript" charset="utf-8" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 	<script type="text/javascript" charset="utf-8" src="http://blog-imgs-56.fc2.com/f/c/2/fc2ist/bootstrap.js"></script>
 	<script type="text/javascript" charset="utf-8" src="http://blog-imgs-56-origin.fc2.com/f/c/2/fc2ist/jquery_fc2_min.js"></script>
-	<script type="text/javascript" charset="utf-8" src="https://dl.dropbox.com/u/9611165/fc2.themes/mini/js/theme.js"></script>
+	<script type="text/javascript" charset="utf-8" src="http://blog-imgs-56-origin.fc2.com/f/c/2/fc2ist/doti-theme.js"></script>
 </head>
 <body class="type-<!--permanent_area-->permanent<!--/permanent_area--><!--titlelist_area-->titlelist<!--/titlelist_area--><!--date_area-->date<!--/date_area--><!--category_area-->category<!--/category_area--><!--search_area-->search<!--/search_area--><!--tag_area-->tag<!--/tag_area--><!--edit_area-->edit<!--/edit_area-->">
 
@@ -41,8 +40,8 @@
 		</hgroup>
 		<nav>
 		  <ul>
-		    <li><a class="icon-sns icon-white twitter" href="#" title="Twitter">Twitter</a></li>
-		    <li><a class="icon-sns icon-white facebook" href="#" title="Facebook">Facebook</a></li>
+		    <li><a class="icon-sns icon-white twitter" href="https://twitter.com/" title="Twitter">Twitter</a></li>
+		    <li><a class="icon-sns icon-white facebook" href="http://www.facebook.com/" title="Facebook">Facebook</a></li>
 		  </ul>
 		</nav>
 	</div>
