--- a/theme.html
+++ b/theme.html
@@ -12,6 +12,7 @@
 	<title><%sub_title><!--tag_area--> | <!--/tag_area--><!--search_area--> | <!--/search_area--><!--category_area--> | <!--/category_area--><!--date_area--> | <!--/date_area--><!--permanent_area--> | <!--/permanent_area--><!--titlelist_area-->Archives | <!--/titlelist_area--><!--edit_area--> | <!--/edit_area--><%blog_name></title>
 	
   <link rel="stylesheet" type="text/css" charset="utf-8" href="<%css_link>" />
+  <link rel="stylesheet" type="text/css" charset="utf-8" href="http://blog-imgs-56-origin.fc2.com/f/c/2/fc2ist/theme-doti-timeline.css" />
 	
 	<link rel="alternate" type="application/rss+xml" title="RSS" href="<%url>?xml" />
 	<link rel="archives" href="/archives.html" title="All Archives" />
@@ -29,6 +30,8 @@
 	<script type="text/javascript" charset="utf-8" src="http://blog-imgs-56.fc2.com/f/c/2/fc2ist/bootstrap.js"></script>
 	<script type="text/javascript" charset="utf-8" src="http://blog-imgs-56-origin.fc2.com/f/c/2/fc2ist/jquery_fc2_min.js"></script>
 	<script type="text/javascript" charset="utf-8" src="http://blog-imgs-56-origin.fc2.com/f/c/2/fc2ist/theme-doti.js"></script>
+	<script type="text/javascript" charset="utf-8" src="http://blog-imgs-56.fc2.com/f/c/2/fc2ist/jquery_masonry.js"></script>
+	<script type="text/javascript" charset="utf-8" src="http://blog-imgs-56-origin.fc2.com/f/c/2/fc2ist/theme-doti-timeline.js"></script>
 </head>
 <body class="type-<!--permanent_area-->permanent<!--/permanent_area--><!--titlelist_area-->titlelist<!--/titlelist_area--><!--date_area-->date<!--/date_area--><!--category_area-->category<!--/category_area--><!--search_area-->search<!--/search_area--><!--tag_area-->tag<!--/tag_area--><!--edit_area-->edit<!--/edit_area-->">
 
