Bootstrap関連の機能追加

--- a/theme.html
+++ b/theme.html
@@ -5,6 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta http-equiv="content-style-type" content="text/css" />
 	<meta http-equiv="content-script-type" content="text/javascript" />
+	<meta name="viewport" content="width=device-width" />
+	
 	<!--not_permanent_area--><meta name="description" content="<%introduction>" /><!--/not_permanent_area-->
 	<!--permanent_area--><meta name="description" content="<%topentry_discription>" /><!--/permanent_area-->
  	<meta name="author" content="<%author_name>" />
@@ -117,8 +119,8 @@
 				<!--not_permanent_area-->
 				<footer>
 				  <ul class="reaction">
-            <!--allow_comment--><li><a href="<%topentry_link>#cm" title="<%topentry_comment_num>"><%template_comment></a></li><!--/allow_comment-->
-            <!--allow_tb--><li><a href="<%topentry_link>#tb" title="<%topentry_tb_num>"><%template_trackback></a></li><!--/allow_tb-->
+            <!--allow_comment--><li><a href="<%topentry_link>#cm" rel="tooltip" title="<%topentry_comment_num>"><%template_comment></a></li><!--/allow_comment-->
+            <!--allow_tb--><li><a href="<%topentry_link>#tb" rel="tooltip" title="<%topentry_tb_num>"><%template_trackback></a></li><!--/allow_tb-->
             <li class="pagetop"><a href="#"><%template_go_top></a></li>
           </ul>
 				</footer>
