--- a/generator/generator-doti.html
+++ b/generator/generator-doti.html
@@ -779,7 +779,7 @@ a:hover {
 							 <!--comment-->
 							 <article id="comment<%comment_no>">
 								 <header>
-									<h3 title="<%comment_name> (<%comment_trip>)"><%comment_url+name><span class="title"><%comment_title></span></h3>
+									<h3 title="<%comment_trip>"><%comment_url+name><span class="title"><%comment_title></span></h3>
 								 </header>
 								 <div class="body">
 									<%comment_body>
