--- a/theme.html
+++ b/theme.html
@@ -129,7 +129,7 @@
 							 <!--comment-->
 							 <article id="comment<%comment_no>">
 								 <header>
-									<h3 title="<%comment_name> (<%comment_trip>)"><%comment_url+name><span class="title"><%comment_title></span></h3>
+									<h3 title="<%comment_trip>"><%comment_url+name><span class="title"><%comment_title></span></h3>
 								 </header>
 								 <div class="body">
 									<%comment_body>
@@ -273,7 +273,7 @@
 								<input type="hidden" name="mode" value="edit" />
 								<input type="hidden" name="mode2" value="edited" />
 								<input type="hidden" name="edit[rno]" value="<%eno>" />
-								 <input type="submit" class="btn btn-primary" tabindex="7" value="<%template_send>" />
+								<input type="submit" class="btn btn-primary" tabindex="7" value="<%template_send>" />
 								<input class="btn btn-danger" type="submit" name="edit[delete]" value="<%template_delete>" />
 							</div>
 						 </form>
