--- a/generator/index.html
+++ b/generator/index.html
@@ -280,8 +280,8 @@
 
 <!-- ブログタイトルの画像 -->
 <xmp id="template-titleImage" class="hide">
-// Title Image
-// --------------------------------------------------
+/* Title
+--------------------------------------------------*/
 
 #header h1 a {
   display: block;
@@ -297,8 +297,8 @@
 
 <!-- 2カラム左サイドバー -->
 <xmp id="template-layout-left" class="hide">
-// Layout
-// --------------------------------------------------
+/* Layout
+--------------------------------------------------*/
 
 #main {
   float: right;
@@ -320,8 +320,8 @@
 
 <!-- 3カラム -->
 <xmp id="template-layout-both" class="hide">
-// Layout
-// --------------------------------------------------
+/* Layout
+--------------------------------------------------*/
 
 .container {
   width: 960px;
@@ -373,8 +373,8 @@
 
 <!-- 1カラム -->
 <xmp id="template-layout-single" class="hide">
-// Layout
-// --------------------------------------------------
+/* Layout
+--------------------------------------------------*/
 
 .container {
   width: 740px;
@@ -430,8 +430,8 @@
  */
 
 
-// Scaffolding
-// --------------------------------------------------
+/* Scaffolding
+--------------------------------------------------*/
 
 body {
   color: {{:color}};
@@ -446,8 +446,8 @@ a:hover {
 }
 
 
-// Header
-// --------------------------------------------------
+/* Header
+--------------------------------------------------*/
 
 #header {
   border-top-color: #555555;
@@ -494,16 +494,16 @@ a:hover {
 }
 
 
-// Main
-// --------------------------------------------------
+/* Main
+--------------------------------------------------*/
 
 #main > h1::after {
   background-color: #222222;
 }
 
 
-// Articles
-// --------------------------------------------------
+/* Articles
+--------------------------------------------------*/
 
 #articles > .post {
   border-bottom-color: #eeeeee;
@@ -537,8 +537,8 @@ a:hover {
 }
 
 
-// Comment & Trackback
-// --------------------------------------------------
+/* Comment & Trackback
+--------------------------------------------------*/
 
 #cm .reaction > h2,
 #tb .reaction > h2 {
@@ -554,8 +554,8 @@ a:hover {
 }
 
 
-// Sidebar
-// --------------------------------------------------
+/* Sidebar
+--------------------------------------------------*/
 
 #sidebar a {
   color: {{:linkColorHover}};
@@ -576,8 +576,8 @@ a:hover {
 }
 
 
-// Footer
-// --------------------------------------------------
+/* Footer
+--------------------------------------------------*/
 
 #footer {
   border-top-color: #eeeeee;
@@ -598,8 +598,8 @@ a:hover {
 }
 
 
-// Timeline
-// --------------------------------------------------
+/* Timeline
+--------------------------------------------------*/
 
 #cm .reaction .timeline::before,
 #tb .reaction .timeline::before {
